--- a/APC/Cargo.toml
+++ b/APC/Cargo.toml
@@ -8,7 +8,7 @@ cortex-m = "0.5.0"
 cortex-m-rt = "0.5.0"
 cortex-m-semihosting = "0.3.0"
 panic-semihosting = "0.3.0"
-aux6 = { path = "auxiliary" }
+#aux6 = { path = "auxiliary" }
 
 # Uncomment for the panic example.
 # panic-itm = "0.1.1"
