Added external hal crate and hacked together a blinky led

--- a/APC/Cargo.toml
+++ b/APC/Cargo.toml
@@ -8,7 +8,15 @@ cortex-m = "0.5.0"
 cortex-m-rt = "0.5.0"
 cortex-m-semihosting = "0.3.0"
 panic-semihosting = "0.3.0"
+stm32f103xx = "0.10.0"
+nb = "0.1.1"
+#stm32f103xx-hal = "1.0"
 #aux6 = { path = "auxiliary" }
+
+[dependencies.stm32f103xx-hal]
+git = "https://github.com/japaric/stm32f103xx-hal.git"
+features = ["rt"]
+version = "*"
 
 # Uncomment for the panic example.
 # panic-itm = "0.1.1"
