--- a/APC/Cargo.toml
+++ b/APC/Cargo.toml
@@ -15,6 +15,10 @@ git = "https://github.com/japaric/stm32f103xx-hal.git"
 features = ["rt"]
 version = "*"
 
+[dependencies.embedded-hal]
+features = ["unproven"]
+version = "0.2.1"
+
 # Uncomment for the panic example.
 # panic-itm = "0.1.1"
 
