simple triangle rendered via EGL

--- a/DIS/firmware/.cargo/config
+++ b/DIS/firmware/.cargo/config
@@ -2,4 +2,5 @@
 linker = "arm-linux-gnueabihf-gcc"
 rustflags = [
     "-C", "link-arg=-L../sysroot/opt/vc/lib/",
+    "-C", "link-arg=-lGLESv2",
 ]
