Split firmware code into binary and library. The library ebola will hold simple rendering engine as well as generic game engine like functionality

--- a/DIS/firmware/Cargo.toml
+++ b/DIS/firmware/Cargo.toml
@@ -3,6 +3,14 @@ name = "firmware"
 version = "0.1.0"
 authors = ["Martin Zielinski <darthcoder1@gmail.com>"]
 
+[lib]
+name = "ebola"
+path = "src/ebola/lib.rs"
+
+[[bin]]
+name = "firmware"
+path = "src/main.rs"
+
 [dependencies]
 videocore = "*"
 egl = "*"
