Preparations for texture rendering

--- a/DIS/firmware/Cargo.toml
+++ b/DIS/firmware/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [dependencies]
 videocore = "*"
 egl = "*"
+image = "*"
 # disabled as the crate on crate.io is having a bug, while the repo is working fine
 # opengles  = "0.1.2"
 
