--- a/DIS/firmware/.vscode/tasks.json
+++ b/DIS/firmware/.vscode/tasks.json
@@ -2,13 +2,17 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
-    "runner": "terminal",
+    "type": "shell",
+    "useWSL": true,
+    
     "tasks": [
         {
-            "label": "deploy",
-            "command": "scp",
-            "args": [
-                "${workspaceRoot}/target/armv7-unknown-linux-gnueabihf/debug/firmware martinz@192.168.178.29:~/firmware"
+            "type": "shell",
+            "label": "build firmware",
+            "group": "build",
+            "command": "./build.sh",
+            "problemMatcher": [
+                "$rustc"
             ]
         }
     ]
