--- a/DIS/firmware/.vscode/tasks.json
+++ b/DIS/firmware/.vscode/tasks.json
@@ -11,6 +11,13 @@
             "label": "build firmware",
             "group": "build",
             "command": "./build.sh",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false
+            },
             "problemMatcher": [
                 "$rustc"
             ]
