Fix compilation issue after file split

--- a/DIS/firmware/.vscode/tasks.json
+++ b/DIS/firmware/.vscode/tasks.json
@@ -19,7 +19,7 @@
                 "showReuseMessage": false
             },
             "problemMatcher": [
-                "$rustc"
+                "$rustc",
             ]
         }
     ]
