--- a/DIS/firmware/.vscode/tasks.json
+++ b/DIS/firmware/.vscode/tasks.json
@@ -21,6 +21,22 @@
             "problemMatcher": [
                 "$rustc",
             ]
+        },
+        {
+            "type": "shell",
+            "label": "deploy firmware",
+            "group": "build",
+            "command": "./deploy.sh",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false
+            },
+            "problemMatcher": [
+                "$rustc",
+            ]
         }
     ]
 }
