--- a/DIS/firmware/Cargo.toml
+++ b/DIS/firmware/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 videocore = "*"
 egl = "*"
 image = "*"
+cgmath = "*"
 # disabled as the crate on crate.io is having a bug, while the repo is working fine
 # opengles  = "0.1.2"
 
