--- a/APC/Cargo.toml
+++ b/APC/Cargo.toml
@@ -4,8 +4,8 @@ name = "APC"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.5.0"
-cortex-m-rt = "0.5.0"
+cortex-m = "0.5.3"
+cortex-m-rt = "=0.5.1"
 cortex-m-semihosting = "0.3.0"
 panic-semihosting = "0.3.0"
 stm32f103xx = "0.10.0"
