Support for windows-host build and debugging
- Changed default build environment to use windows-installation
  of rust rather than the hack WSL setup from before.
- Added launch.json and setup for debugging on the stm32 via vscode

--- a/APC/.cargo/config
+++ b/APC/.cargo/config
@@ -1,6 +1,7 @@
 [target.thumbv6m-none-eabi]
 runner = 'arm-none-eabi-gdb'
 rustflags = [
+  "-C", "linker=arm-none-eabi-gcc",
   "-C", "link-arg=-Wl,-Tlink.x",
   "-C", "link-arg=-nostartfiles",
 ]
@@ -8,6 +9,7 @@ rustflags = [
 [target.thumbv7m-none-eabi]
 runner = 'arm-none-eabi-gdb'
 rustflags = [
+  "-C", "linker=arm-none-eabi-gcc",
   "-C", "link-arg=-Wl,-Tlink.x",
   "-C", "link-arg=-nostartfiles",
 ]
@@ -15,6 +17,7 @@ rustflags = [
 [target.thumbv7em-none-eabi]
 runner = 'arm-none-eabi-gdb'
 rustflags = [
+  "-C", "linker=arm-none-eabi-gcc",
   "-C", "link-arg=-Wl,-Tlink.x",
   "-C", "link-arg=-nostartfiles",
 ]
@@ -22,9 +25,10 @@ rustflags = [
 [target.thumbv7em-none-eabihf]
 runner = 'arm-none-eabi-gdb'
 rustflags = [
+  "-C", "linker=arm-none-eabi-gcc",
   "-C", "link-arg=-Wl,-Tlink.x",
   "-C", "link-arg=-nostartfiles",
 ]
 
-#[build]
-#target = "thumbv7em-none-eabihf"
+[build]
+target = "thumbv7em-none-eabihf"
