--- a/APC/.gitignore
+++ b/APC/.gitignore
@@ -4,4 +4,6 @@
 Cargo.lock
 target/
 itm.fifo
-.vscode/
+.vscode/.cortex-debug.peripherals.state.json
+.vscode/.cortex-debug.registers.state.json
+.vscode/settings.json
