--- a/APC/.vscode/tasks.json
+++ b/APC/.vscode/tasks.json
@@ -12,7 +12,7 @@
             "group": "build",
             "command": "cargo",
             "options": {
-                "cwd": "${workspaceFolder}",
+                "cwd": "${workspaceFolder}"
             },
             "args": [
                 "build",
@@ -26,7 +26,7 @@
                 "showReuseMessage": false
             },
             "problemMatcher": [
-                "$rustc",
+                "$rustc"
             ]
         },
         {
@@ -42,7 +42,7 @@
                 "showReuseMessage": false
             },
             "problemMatcher": [
-                "$rustc",
+                "$rustc"
             ]
         }
     ]
