--- a/APC/.vscode/launch.json
+++ b/APC/.vscode/launch.json
@@ -5,11 +5,21 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Cortex Debug (stutil)",
+            "cwd": "${workspaceRoot}",
+            "executable": "./target/thumbv7em-none-eabihf/debug/APC",
+            "request": "launch",
+            "type": "cortex-debug",
+            "servertype": "stutil",
+            "v1": false
+            
+        },
+        {
             "name": "Cortex Debug (openocd)",
             "cwd": "${workspaceRoot}",
             "executable": "./target/thumbv7em-none-eabihf/debug/APC",
             "request": "launch",
-            "type": "cortex-debug",            
+            "type": "cortex-debug",
             "servertype": "openocd",
             "configFiles": [
                 "interface/stlink-v2.cfg",
