--- a/APC/Cargo.toml
+++ b/APC/Cargo.toml
@@ -4,9 +4,11 @@ name = "APC"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.5.3"
-cortex-m-rt = "=0.5.1"
-cortex-m-semihosting = "0.3.0"
+cortex-m-rt = "*"
+
+[dependencies.cortex-m]
+version = "*"
+features = ["inline-asm"]
 
 [dependencies.stm32f103xx-hal]
 git = "https://github.com/japaric/stm32f103xx-hal.git"
@@ -15,12 +17,18 @@ version = "*"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
-version = "0.2.1"
+version = "*"
 
-# Uncomment for the allocator example.
-# alloc-cortex-m = "0.3.4"
+[profile.dev]
+panic = "abort"
+debug = true
+opt-level = 0
+lto = false
+debug-assertions = true
+
 
 [profile.release]
+panic = "abort"
 codegen-units = 1 # better optimizations
 debug = true
 lto = true # better optimizations
