--- a/DIS/firmware/.vscode/tasks.json
+++ b/DIS/firmware/.vscode/tasks.json
@@ -3,14 +3,21 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "type": "shell",
-    "useWSL": true,
+    "useWSL": false,
     
     "tasks": [
         {
-            "type": "shell",
+            "type": "process",
             "label": "build firmware",
             "group": "build",
-            "command": "./build.sh",
+            "command": "cargo",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "args": [
+                "build",
+                "--target=armv7-unknown-linux-gnueabihf",
+            ],
             "presentation": {
                 "echo": true,
                 "reveal": "always",
@@ -19,7 +26,7 @@
                 "showReuseMessage": false
             },
             "problemMatcher": [
-                "$rustc",
+                "$rustc"
             ]
         },
         {
